--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets":[
-        "es2015", "react"
+        "es2015", "react", "stage-2"
+    ],
+      "plugins": [
+        "transform-decorators-legacy",
+        "transform-class-properties"
     ]
 }
