--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.29.0",
     "mobx": "^3.1.16",
+    "mobx-react": "^4.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-stage-2": "^6.24.1",
+    "mobx-react-devtools": "^4.2.15"
   }
 }
